SVGAnimationElement is missing onbegin/onend/onrepeat event handler IDL attributes
Categories
(Core :: SVG, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox93 | --- | fixed |
People
(Reporter: foolip, Assigned: longsonr)
Details
(Keywords: parity-chrome)
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.159 Safari/537.36
Steps to reproduce:
Tested support using http://mdn-bcd-collector.appspot.com/tests/api/SVGAnimationElement for the purposes of updating the MDN compat data in https://github.com/mdn/browser-compat-data/pull/12113.
Actual results:
The onbegin/onend/onrepeat event handler IDL attributes are not supported, confirmed here:
https://github.com/mozilla/gecko-dev/blob/3e1dc3d1eb4cb2aafd69d9215e8476e61a8e72d9/dom/webidl/SVGAnimationElement.webidl
Note that Firefox does seem to support the events themselves and the content attributes, based on WPT results:
https://wpt.fyi/results/svg/animations?run_id=5714668552192000&run_id=4921134689550336&run_id=6272201545220096&run_id=4808538330234880
Expected results:
Per spec these IDL attributes should be supported:
https://svgwg.org/specs/animations/#InterfaceSVGAnimationElement
They're already supported in Chrome, but not Safari.
| Assignee | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 2•4 years ago
|
||
Comment 5•4 years ago
|
||
| bugherder | ||
Description
•