Bug 1727881 - Add onbegin/onend/onrepeat event handler IDL attributes to SVGAnimationElement r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D123890